--- a/styles/content.css
+++ b/styles/content.css
@@ -1,12 +1,30 @@
-* {
-     font-family: 'Open Sans', sans-serif;
+ /* Mobile first */
+
+html {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
-.body-container{
-	font-size: 100%;
-	padding: 1em;
-	/*padding: 20px 150px;*/
+body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
+
+header, div.header {
+  background: #211545;
+  color: white;
+  text-align: left;
+  position: sticky;
+  top: 0;
+  padding: .5rem 2rem;
+  z-index: 1;
+}
+
+header>h1 {
+  font-size: 1.5rem;
+  line-height: 1.75em;
+}
+
 main {
   padding: 2rem 2rem 20rem 2rem;
 }
@@ -15,66 +33,173 @@ section {
   margin-bottom: 3rem;
 }
 
+main>section>h1 {
+  font-size: 2em;
+}
+
+h2:not(.heading), h3, h4, p {
+  color: #333333;
+}
+
+h1:not(.heading), h2:not(.heading), h3, h4 {
+  border-bottom: 1px dotted #ccc;
+  padding: .5em;
+}
+
+
+footer {
+  background: #211545;
+  padding: 4rem 1rem;
+  color: white;
+}
+
+/* mobile nav inspired by
+https://www.uts.edu.au/current-students/support/helps/self-help-resources/academic-writing */
+nav {
+  background-color: #211545;
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  overflow: auto;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: 0.2s;
+}
+
+/*nav h2 {
+  color: white;
+}*/
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+/* Indent without moving the background-color position */
+nav ul li a.nav-level1 {
+  padding-left: 2rem;
+}
+
+nav ul li a.nav-level2 {
+  padding-left: 3.5rem;
+}
+
+nav ul li a.nav-level4 {
+  padding-left: 6.5rem;
+}
+
+nav ul li a:not(nav-level1):not(nav-level2):not(nav-level4) {
+  text-decoration: none;
+  display: block;
+  padding-left: 5rem;
+  padding-right: 3rem;
+}
+
+nav ul li a {
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  color: white;
+  text-decoration: none;
+}
+
+nav ul li a.current {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+nav>ul>li:not(:first-child) {
+  margin-top: 1rem;
+}
+
+.arrow {
+  position: absolute;
+  right: 1.25em;
+  border: solid white;
+  border-width: 0 .13em .13em 0;
+  display: inline-block;
+  padding: .3em;
+  color: white;
+  margin: .2em;
+}
+
+.down {
+  transform: rotate(45deg);
+}
+
+.up {
+  transform: rotate(-135deg);
+}
+
+section:target {
+  padding-top: 90px; 
+  margin-top: -90px;
+}
+
+
+/* FROM AUGUSTO --------------------------------------------------------- */
+
 /*---------------------------------------------------------------------------------------------------------*/
 
 /*Back to top button*/
 #back-to-top-btn{
-	display: none;
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-	font-size: 26px;
-	width: 50px;
-	height: 50px;
-	background-color: #ffffff;
-	color: #333333;
-	cursor: pointer;
-	outline: none;
-	border: 3px solid #333333;
-	border-radius: 50%;
-	transition-duration: 0.2s;
-	transition-timing-function: ease-in-out;
-	transition-property: background-colour, color;
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 26px;
+  width: 50px;
+  height: 50px;
+  background-color: #ffffff;
+  color: #333333;
+  cursor: pointer;
+  outline: none;
+  border: 3px solid #333333;
+  border-radius: 50%;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  transition-property: background-colour, color;
 }
 
 #back-to-top-btn:hover, #back-to-top-btn:focus{
-	background-color: #333333;
-	color: #ffffff;
+  background-color: #333333;
+  color: #ffffff;
 }
 
 .btnEntrance{
-	animation-duration: 0.5s;
-	animation-fill-mode: both;
-	animation-name: btnEntrance;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: btnEntrance;
 }
 
 /*FadeInUp*/
 @keyframes btnEntrance {
-	from{
-		opacity: 0;
-		transform: translate3d(0, 100%, 0);
-	}
-	to{
-		opacity: 1;
-		transform: translate3d(0, 0, 0);
-	}
+  from{
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to{
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .btnExit{
-	animation-duration: 0.25s;
-	animation-fill-mode: both;
-	animation-name: btnExit;
+  animation-duration: 0.25s;
+  animation-fill-mode: both;
+  animation-name: btnExit;
 }
 
 /*FadeOutDown*/
 @keyframes btnExit {
-	from{
-		opacity: 1;
-	}
-	to{
-		opacity: 0;
-		transform: translate3d(0, 100%, 0);
-	}
+  from{
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
 }
 
 /*---------------------------------------------------------------------------------------------------------*/
@@ -96,16 +221,16 @@ section {
 }
 
 .search-box:hover > .search-btn{
-	visibility: hidden;
+  visibility: hidden;
   background: white;
-	position: absolute;
-	top: 10px;
-	right:10px;
-	visibility: visible;
+  position: absolute;
+  top: 10px;
+  right:10px;
+  visibility: visible;
 }
 
 .search-btn{
-	position: absolute;
+  position: absolute;
   color: #eeeeee;
   float: right;
   width: 40px;
@@ -132,246 +257,314 @@ section {
 
 /*---------------------------------------------------------------------------------------------------------*/
 
-.heading{
-font-size: 2.5rem;
-}
-
-.paragraph-box{
-	background-color: #ecf9f2;
-	width: 170px;
-	border: 2px solid #ccdfcb;
-	padding: 30px;
-	margin: 20px;
-}
-
-/*---------------------------------------------------------------------------------------------------------*/
-
 /*YouTube Video*/
 .iframe-container {
-	overflow: hidden;
-	padding-top: 56.25%;
-	position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
 }
 
 .iframe-container iframe {
-	 border: 0;
-	 height: 100%;
-	 left: 0;
-	 position: absolute;
-	 top: 0;
-	 width: 100%;
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
 }
 
 /* 4x3 Aspect Ratio */
 .iframe-container-4x3 {
-	padding-top: 75%;
+  padding-top: 75%;
 }
 
 /*---------------------------------------------------------------------------------------------------------*/
 
 /*Table*/
 table {
-	border-collapse: collapse;
-	width: 60%;
+  border-collapse: collapse;
+  width: 60%;
   border-collapse: collapse;
   border: 1px solid black;
-	padding-left: 10px;
+  padding-left: 10px;
 }
 
 tr:nth-child(even){
-	background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 th{
-	text-align: left;
-	padding: 8px;
-	background-color: #ccdfcb;
-	color: #000000;
+  text-align: left;
+  padding: 8px;
+  background-color: #ccdfcb;
+  color: #000000;
 }
 
 td {
-	text-align: left;
-	padding: 8px;
+  text-align: left;
+  padding: 8px;
 }
 
-/*---------------------------------------------------------------------------------------------------------*/
-/*For DESKTOP Screen*/
-@media screen and (min-width: 800px){
-.heading{
-	  text-transform: uppercase;
-	  font-size: 3rem;
-	  letter-spacing: 1px;
-	  margin-right: -3px;
-	  margin-bottom: 5rem;
-	  text-align: center;
-	  color: #333333;
-	  position: relative;
-	  padding-left: 10px;
-	}
 
-/*h2 topic*/
-.topic{
-	  font-size: 2.6rem;
-	  letter-spacing: 0px;
-	  padding-left: 10px;
-	}
 
-.content{
-	  padding-left: 10px;
-		padding-bottom: 1px;
-	}
 
-.paragraph-box{
-		background-color: #ecf9f2;
-	  width: 750px;
-	  border: 2px solid #ccdfcb;
-	  padding: 30px;
-	  margin: 20px;
-	}
 
-.section{
-		font-size: 2rem;
-		letter-spacing: 0px;
-		padding-left: 10px;
-	}
+@media all and (min-width: 800px) {
+  body {
+    display: grid;
+    grid-template-columns: 35% 1fr;
+    grid-template-rows: min-content 1fr min-content;
+  }
 
-.subtopic{
-	  font-size: 1.5rem;
-	  letter-spacing: 0px;
-	  padding-left: 10px;
-	  color: #056571;
-	}
+  header {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    display: inline-block;
+    position: static;
+    padding: 2rem;
+    text-align: center;
 
-/*---------------------------------------------------------------------------------------------------------*/
-/*Search Bar*/
-.search-box{
-	  position: absolute;
-	  top: 7.5%;
-	  left: 80%;
-	  transform: translate(-50%, -50%);
-	  background: #056571;
-	  height: 40px;
-	  border-radius: 40px;
-	  padding: 10px;
-	}
+    background: linear-gradient(
+      to bottom right,
+      rgba(0,0,0, 0),
+      rgba(33, 21, 69, .7),
+      rgba(33, 21, 69, 1)),
 
-.search-box:hover > .search-txt{
-	  width: 240px;
-	}
+      linear-gradient(
+      to bottom,
+      rgba(0,0,0, 0),
+      rgba(33, 21, 69, .8)),
 
-.search-box:hover > .search-btn{
-		visibility: hidden;
-	  background: white;
-		position: absolute;
-		top: 10px;
-		right:10px;
-		visibility: visible;
-	}
+      url(writing.jpg) no-repeat bottom center;
+  
+    background-size: cover;
+  }
+  
+  header>h1 {
+    font-size: 4rem;
+    line-height: 1.75em;
+  }
 
-.search-btn{
-		position: absolute;
-	  color: #eeeeee;
-	  float: right;
-	  width: 40px;
-	  height: 40px;
-	  border-radius: 50%;
-	  background: #056571;
-	  display: flex;
-	  justify-content: center;
-	  align-items: center;
-	}
+  h1, h2, h3 {
+    padding-top: auto;
+  }
 
-.search-txt{
-	  border: none;
-	  background: none;
-	  outline: none;
-	  float: left;
-	  padding: 0px;
-	  color: #ffffff;
-	  font-size: 16px;
-	  transition: 0.4s;
-	  line-height: 40px;
-	  width: 40px;
-	}
+  main {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    padding-bottom: 30rem;
+  }
 
-/*---------------------------------------------------------------------------------------------------------*//*Youtube Video*/
-.iframe-container {
-		overflow: hidden;
-		padding-top: 56.25%;
-		position: relative;
-	}
+  section, h1:not(.heading) {
+    padding-top: 1rem;
+    margin-bottom: 3rem;
+  }
 
-.iframe-container iframe {
-		 border: 0;
-		 height: 65%;
-		 left: 0;
-		 position: absolute;
-		 top: 0;
-		 bottom: -50px;
-		 width: 65%;
-	}
+  footer {
+    grid-column: 1 / 3;
+    grid-row: 3/4;
+  }
 
-	/* 4x3 Aspect Ratio */
-.iframe-container-4x3 {
-		padding-top: 50%;
-	}
+  nav {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: inline-block;
+    white-space: wrap;
+    background-color: #eeeeee;
+    width: auto;
+    height: initial !important;
+    overflow: initial;
+    position: static;
+  }
 
-#back-to-top-btn{
-		display: none;
-		position: fixed;
-		bottom: 20px;
-		right: 20px;
-		font-size: 26px;
-		width: 50px;
-		height: 50px;
-		background-color: #ffffff;
-		color: #333333;
-		cursor: pointer;
-		outline: none;
-		border: 3px solid #333333;
-		border-radius: 50%;
-		transition-duration: 0.2s;
-		transition-timing-function: ease-in-out;
-		transition-property: background-colour, color;
-	}
+  /* Only stick if you can fit */
+  @media (min-height: 300px) {
+    nav ul {
+      position: sticky;
+      top: 0;
+    }
+  }
 
-#back-to-top-btn:hover, #back-to-top-btn:focus{
-		background-color: #333333;
-		color: #ffffff;
-	}
+  nav ul li a:not(nav-subheading) {
+    color: black;
+  }
 
-.btnEntrance{
-		animation-duration: 0.5s;
-		animation-fill-mode: both;
-		animation-name: btnEntrance;
-	}
+  nav ul li a {
+    color: black;
+  }
 
-	/*FadeInUp*/
-@keyframes btnEntrance {
-		from{
-			opacity: 0;
-			transform: translate3d(0, 100%, 0);
-		}
-		to{
-			opacity: 1;
-			transform: translate3d(0, 0, 0);
-		}
-	}
+  nav ul li a::after {
+    display: block;
+    content: attr(title);
+    font-weight: bold;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+  }
 
-.btnExit{
-		animation-duration: 0.25s;
-		animation-fill-mode: both;
-		animation-name: btnExit;
-	}
+  nav ul li a:hover {
+    font-weight: bold;
+    background-color: #f5f5f5;
+  }
 
-	/*FadeOutDown*/
-@keyframes btnExit {
-		from{
-			opacity: 1;
-		}
-		to{
-			opacity: 0;
-			transform: translate3d(0, 100%, 0);
-		}
+  nav ul li a.current {
+    background: #404040;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  section:target {
+    padding-top: 1rem; 
+    margin-top: 0;
+  }
+
+  div.header {
+    display: none;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  /* FROM AUGUSTO ------------------------------------------------------ */
+
+  .search-box{
+      position: absolute;
+      top: 7.5%;
+      left: 80%;
+      transform: translate(-50%, -50%);
+      background: #056571;
+      height: 40px;
+      border-radius: 40px;
+      padding: 10px;
+      z-index: 9999;
+    }
+
+  .search-box:hover > .search-txt{
+      width: 240px;
+    }
+
+  .search-box:hover > .search-btn{
+      visibility: hidden;
+      background: white;
+      position: absolute;
+      top: 10px;
+      right:10px;
+      visibility: visible;
+    }
+
+  .search-btn{
+      position: absolute;
+      color: #eeeeee;
+      float: right;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #056571;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+  .search-txt{
+      border: none;
+      background: none;
+      outline: none;
+      float: left;
+      padding: 0px;
+      color: #ffffff;
+      font-size: 16px;
+      transition: 0.4s;
+      line-height: 40px;
+      width: 40px;
+    }
+
+
+  #back-to-top-btn{
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 26px;
+      width: 50px;
+      height: 50px;
+      background-color: #ffffff;
+      color: #333333;
+      cursor: pointer;
+      outline: none;
+      border: 3px solid #333333;
+      border-radius: 50%;
+      transition-duration: 0.2s;
+      transition-timing-function: ease-in-out;
+      transition-property: background-colour, color;
+    }
+
+  #back-to-top-btn:hover, #back-to-top-btn:focus{
+      background-color: #333333;
+      color: #ffffff;
+    }
+
+  .btnEntrance{
+      animation-duration: 0.5s;
+      animation-fill-mode: both;
+      animation-name: btnEntrance;
+    }
+
+    /*FadeInUp*/
+  @keyframes btnEntrance {
+      from{
+        opacity: 0;
+        transform: translate3d(0, 100%, 0);
+      }
+      to{
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+      }
+    }
+
+  .btnExit{
+      animation-duration: 0.25s;
+      animation-fill-mode: both;
+      animation-name: btnExit;
+    }
+
+    /*FadeOutDown*/
+  @keyframes btnExit {
+      from{
+        opacity: 1;
+      }
+      to{
+        opacity: 0;
+        transform: translate3d(0, 100%, 0);
+      }
+
+    }
+
 
 }
+
+@media all and (min-width: 1440px) {
+  body {
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: min-content 1fr min-content;
+  }
+
+  nav {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    display: inline-block;
+    white-space: nowrap;
+    background-color: #eeeeee;
+    width: auto;
+    height: initial !important;
+    overflow: initial;
+    position: static;
+  }
+
+/* HELP FROM THE WEB
+
+https://css-tricks.com/sticky-smooth-active-nav/
+
+https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors
+
+https://stackoverflow.com/questions/556153/inline-elements-shifting-when-made-bold-on-hover
