--- a/styles/content.css
+++ b/styles/content.css
@@ -113,6 +113,12 @@ nav>ul>li:not(:first-child) {
   margin-top: 1rem;
 }
 
+header>h1>a {
+  color: white;
+  text-decoration: none;
+}
+
+
 .arrow {
   position: absolute;
   right: 1.25em;
@@ -309,7 +315,7 @@ td {
   background-color: #ecf9f2;
   border: 2px solid #ccdfcb;
   padding: 1.5rem;
-  margin: 2rem;
+  margin: 2rem 0 2rem 0;
 }
 
 
@@ -545,12 +551,9 @@ td {
       }
 
     }
-
-  header>h1>a {
-    color: white;
-    text-decoration: none;
+  .example {
+    margin: 2rem;
   }
-
 
 }
 
