--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,23 @@
  body{
      font-size: 85%;
      padding: 1em;
-     text-align: center;
+     text-align: left;
 }
+header, div.header {
+  background: #211545;
+  color: white;
+  text-align: left;
+  position: sticky;
+  top: 0;
+  padding: .5rem 2rem;
+  z-index: 1;
+}
+
+header>h1 {
+  font-size: 1.5rem;
+  line-height: 1.75em;
+}
+
 html {
 box-sizing: border-box;
 }
@@ -195,6 +210,14 @@ box-sizing: border-box;
      width:100%;
      height:auto;
 }
+
+footer {
+  grid-column: 1 / 3;
+  grid-row: 3/4;
+  background: #211545;
+  padding: 4rem 1rem;
+  color: white;
+}
 /* CSS for tablets/large screens */
  @media screen and (min-width: 800px){
      body{
@@ -205,3 +228,38 @@ box-sizing: border-box;
       flex-direction: row;
       margin: auto 20%;
     }
+
+
+    @media all and (min-width: 800px) {
+    header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        display: inline-block;
+        position: static;
+        padding: 2rem;
+        text-align: center;
+
+        background: linear-gradient(
+          to bottom right,
+          rgba(0,0,0, 0),
+          rgba(33, 21, 69, .7),
+          rgba(33, 21, 69, 1)),
+
+          linear-gradient(
+          to bottom,
+          rgba(0,0,0, 0),
+          rgba(33, 21, 69, .8)),
+
+          url(writing.jpg) no-repeat bottom center;
+
+        background-size: cover;
+      }
+
+      header>h1 {
+        font-size: 4rem;
+        line-height: 1.75em;
+      }
+
+      h1, h2, h3 {
+        padding-top: auto;
+      }
