For lighthouse validation:
Merged the two stylesheets that are linked to the HTML file
Tried to put font in css instead of loading from url
Added a name to the iframes

--- a/styles/content.css
+++ b/styles/content.css
@@ -1,5 +1,13 @@
  /* Mobile first */
 
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v16/mem8YaGs126MiZpBA-UFVZ0bf8pkAg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
@@ -196,6 +204,26 @@ section:target {
     transform: translate3d(0, 100%, 0);
   }
 }
+
+.fas{
+    -moz-osx-font-smoothing:grayscale;
+    -webkit-font-smoothing:antialiased;
+    display:inline-block;
+    font-style:normal;
+    font-variant:normal;
+    text-rendering:auto;
+    line-height:1;
+    font-family:"Font Awesome 5 Free";
+    font-weight:900;
+}
+
+
+.fa-angle-double-up:before {content:"\f102"}
+
+
+/*.fa-search:before {content:"\f002"}*/
+
+
 
 /* Search Bar ------------------------------------------------------- */
 
